Fixed content scroll behind footer

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,11 +1,13 @@
 
 body {
-    height: 100%;
+    /* height: 100%; */
+    /* overflow-x: auto; */
 }
 
 main {
     width: 80%;
     margin: auto;
+    margin-bottom: 125px;
 }
 
 a {
@@ -14,10 +16,12 @@ a {
 }
 
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 100px;
     background:rgb(204, 205, 206);
     text-align: center;
+    margin-top: 25px;
+    background-attachment: scroll;
 }
